--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Screw It. Together." style="max-width: 25%; height: auto; border-radius: 50%;">
+        <img src="logo.png" alt="Screw It. Together." style="max-width: 25%; height: auto; border-radius: 50%;">
     </header>
     <section id="step-1" style="margin-bottom: 40px;">
         <h2 style="text-align: center;">Step 1: Add Materials</h2>
@@ -101,7 +101,7 @@
     
     <!-- This is where the response will be shown -->
     <div id="response"></div>
-    <img src="images/share.png" alt="Share Ideas" onclick="shareIdeas()" style="cursor: pointer; margin-left: 10px; max-width: 20px; height: auto; float: right;">
+    <img src="share.png" alt="Share Ideas" onclick="shareIdeas()" style="cursor: pointer; margin-left: 10px; max-width: 20px; height: auto; float: right;">
 
     <script>
         // JavaScript logic for adding materials, toggling selection, generating ideas, and sharing ideas
