--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Screw It. Together." style="max-width: 25%; height: auto; border-radius: 50%;">
+        <img src="images/logo.png" alt="Screw It. Together." style="max-width: 25%; height: auto; border-radius: 50%;">
     </header>
     <section id="step-1" style="margin-bottom: 40px;">
         <h2 style="text-align: center;">Step 1: Add Materials</h2>
@@ -99,13 +99,11 @@
         <button class="generate-ideas" onclick="generateText()">Generate Furniture Ideas</button>
     </section>
     
-    <!-- This is where the response will be shown -->
     <div id="response"></div>
-    <img src="share.png" alt="Share Ideas" onclick="shareIdeas()" style="cursor: pointer; margin-left: 10px; max-width: 20px; height: auto; float: right;">
+    <img src="images/share.png" alt="Share Ideas" onclick="shareIdeas()" style="cursor: pointer; margin-left: 10px; max-width: 20px; height: auto; float: right;">
 
+    <!-- Move the script to the bottom of the body -->
     <script>
-        // JavaScript logic for adding materials, toggling selection, generating ideas, and sharing ideas
-
         let selectedMaterials = loadMaterialsFromCookies();
 
         function saveMaterialsToCookies() {
@@ -128,9 +126,11 @@
             });
         };
 
-        async function addCustomMaterial() {
+        // Function to add a custom material
+        function addCustomMaterial() {
             const customMaterialInput = document.getElementById('custom-material');
             const customMaterial = customMaterialInput.value.trim();
+
             if (customMaterial && !selectedMaterials.includes(customMaterial)) {
                 if (selectedMaterials.length < 20) {
                     const materialSelection = document.querySelector('.material-selection');
@@ -139,44 +139,10 @@
                     newBubble.textContent = customMaterial;
                     newBubble.onclick = function() { toggleMaterial(this); };
                     materialSelection.appendChild(newBubble);
+
                     selectedMaterials.push(customMaterial);
                     saveMaterialsToCookies();
-                    customMaterialInput.value = '';
-
-                    // Query the API for additional related materials
-                    try {
-                        const response = await fetch('/api/generate', {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify({ prompt: `Suggest 3 additional materials related to: ${customMaterial}, only return the three one word materials, comma separated, nothing else` }),
-                        });
-
-                        if (!response.ok) {
-                            throw new Error('Failed to fetch additional materials from server');
-                        }
-
-                        const data = await response.json();
-                        if (data && data.content) {
-                            const additionalMaterials = data.content.split(',').map(item => item.trim()).filter(item => item !== '');
-                            additionalMaterials.slice(0, 3).forEach(material => {
-                                if (!selectedMaterials.includes(material)) {
-                                    const newRelatedBubble = document.createElement('button');
-                                    newRelatedBubble.className = 'material-bubble';
-                                    newRelatedBubble.textContent = material;
-                                    newRelatedBubble.onclick = function() { toggleMaterial(this); };
-                                    materialSelection.appendChild(newRelatedBubble);
-                                    selectedMaterials.push(material);
-                                    saveMaterialsToCookies();
-                                }
-                            });
-                        } else {
-                            console.error('Unexpected response format:', data);
-                        }
-                    } catch (error) {
-                        console.error('Error fetching additional materials from OpenAI:', error);
-                    }
+                    customMaterialInput.value = '';  // Clear the input after adding
                 } else {
                     alert('You can select up to 20 materials only.');
                 }
@@ -211,31 +177,38 @@
                 return;
             }
 
-            document.getElementById('response').textContent = 'Loading...';  // Show a loading message while waiting
+            document.getElementById('response').textContent = 'Loading...';
 
             try {
-                const response = await fetch('/api/generate', {
+                const apiKey = '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';
+                const response = await fetch('https://api.openai.com/v1/chat/completions', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${apiKey}`
                     },
-                    body: JSON.stringify({ prompt: prompt }),  // Send the prompt to the backend
+                    body: JSON.stringify({
+                        model: "gpt-4",
+                        messages: [
+                            { role: "system", content: "You are a helpful assistant." },
+                            { role: "user", content: prompt }
+                        ]
+                    })
                 });
 
                 if (!response.ok) {
-                    throw new Error('Failed to fetch response from server');
+                    throw new Error('Failed to fetch response from OpenAI');
                 }
 
                 const data = await response.json();
-
-                // Update the HTML with the response from OpenAI
-                document.getElementById('response').innerHTML = data.content.replace(/\n/g, '<br>');
+                document.getElementById('response').innerHTML = data.choices[0].message.content.replace(/\n/g, '<br>');
             } catch (error) {
                 console.error('Error fetching OpenAI response:', error);
-                document.getElementById('response').textContent = 'Error: ' + error.content;
+                document.getElementById('response').textContent = 'Error: ' + error.message;
             }
         }
-            function shareIdeas() {
+
+        function shareIdeas() {
             const responseText = document.getElementById('response').innerText;
             if (responseText) {
                 navigator.share({
